Fixed potential null pointers and fixed more deprecated parameters